; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_equalizer.c_vlclua_equalizer_get_presets.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_equalizer.c_vlclua_equalizer_get_presets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NB_PRESETS = common dso_local global i32 0, align 4
@preset_list_text = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [15 x i8] c"preset id=\22%d\22\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_equalizer_get_presets to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_equalizer_get_presets(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @lua_newtable(i32* %6)
  store i32 0, i32* %5, align 4
  br label %8

8:                                                ; preds = %30, %1
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @NB_PRESETS, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %33

12:                                               ; preds = %8
  %13 = load i32*, i32** %3, align 8
  %14 = load i32*, i32** @preset_list_text, align 8
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @lua_pushstring(i32* %13, i32 %18)
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @asprintf(i8** %4, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %20)
  %22 = icmp eq i32 %21, -1
  br i1 %22, label %23, label %24

23:                                               ; preds = %12
  store i32 0, i32* %2, align 4
  br label %34

24:                                               ; preds = %12
  %25 = load i32*, i32** %3, align 8
  %26 = load i8*, i8** %4, align 8
  %27 = call i32 @lua_setfield(i32* %25, i32 -2, i8* %26)
  %28 = load i8*, i8** %4, align 8
  %29 = call i32 @free(i8* %28)
  br label %30

30:                                               ; preds = %24
  %31 = load i32, i32* %5, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %5, align 4
  br label %8

33:                                               ; preds = %8
  store i32 1, i32* %2, align 4
  br label %34

34:                                               ; preds = %33, %23
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i32 @lua_newtable(i32*) #1

declare dso_local i32 @lua_pushstring(i32*, i32) #1

declare dso_local i32 @asprintf(i8**, i8*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
